增加标签分类

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Jared73的方阵
-subtitle: ..eh
-description: 琐事记录
+subtitle: 天下皆白,唯我独黑,非攻墨门,兼爱平生
+description: 兵者，诡道
 keywords: 
 author: Jared
 language: zh-Hans
